--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,29 @@
 # \u2705 Application Name
 spring.application.name=eventmanager
 
-# \u2705 PostgreSQL Database Configuration (FIXED)
+# \u2705 PostgreSQL (Neon DB) Configuration
 spring.datasource.url=jdbc:postgresql://ep-late-term-a11e3h3b-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 spring.datasource.username=neondb_owner
 spring.datasource.password=npg_I7acjAOFl3XH
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# \u2705 Hibernate/JPA Configuration
+# \u2705 JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# \u2705 File Upload Configuration
+# \u2705 Multipart File Size Limit
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
-spring.web.resources.static-locations=file:./uploads/media/
 
-# \u2705 File Storage Configuration
-file.upload-dir=./uploads/media
-
-# \u2705 Disable Spring Security auto-configuration
+# \u2705 Disable Spring Security auto-config (if not used)
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 # \u2705 Server Port
 server.port=8080
+
+# \u2705 Cloudinary Configuration
+cloudinary.cloud-name=dc4mopklz
+cloudinary.api-key=977869464375111
+cloudinary.api-secret=LaM-An4c5w3E0N_nuAVVxRJoDL0
